src/test/deca/context/invalid/decaObjet/instanceof/02wrongExprInt.deca
// Description:
//    instanceof sur un int (et non une variable de type classe ou null)
//
// Resultats:
//    02wrongExprInt.deca:13:6:
//
// Historique:
//    cree le 16/06/2022

class A{}

{ 
    1 instanceof A;
}